<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/bin_checker_title"
            android:fontFamily="@font/fantasque_bold"/>
        <EditText
            android:textColor="@color/white"
            android:textColorHighlight="#6633b5e5"
            android:id="@+id/binEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_enter_here"
            android:maxLength="6"
            android:inputType="number"/>
        <Button
            android:textColor="@color/black"
            android:id="@+id/checkBinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_consultar"
            android:fontFamily="@font/fantasque_bold"
            android:backgroundTint="@color/background_bar_color"/>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColorHighlight="#6633b5e5"
            android:gravity="top"
            android:id="@+id/resultEditText"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_result"
            android:inputType="textMultiLine"
            android:textIsSelectable="true"/>
    </LinearLayout>
</FrameLayout>
