<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mwp_title"
            android:fontFamily="@font/fantasque_bold"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <EditText
                android:textColor="@color/white"
                android:textColorHighlight="#6633b5e5"
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:ems="10"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <EditText
            android:textColor="@color/white"
            android:textColorHighlight="#6633b5e5"
            android:id="@+id/personalizadoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_domain"
            android:ems="10"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@color/white"
                android:textColorHighlight="#6633b5e5"
                android:gravity="center"
                android:id="@+id/cantidad_mail"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="5"
                android:inputType="number"/>
            <Button
                android:textColor="@color/black"
                android:id="@+id/btn_gen_mails_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_generate"
                android:fontFamily="@font/fantasque_bold"
                android:backgroundTint="@color/background_bar_color"/>
        </LinearLayout>
        <EditText
            android:textColor="@color/white"
            android:textColorHighlight="#6633b5e5"
            android:gravity="left"
            android:id="@+id/viewText"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_result"
            android:textIsSelectable="true"/>
    </LinearLayout>
</FrameLayout>
